sap/5.1/modules/ROOT/pages/sap-connector-5-upgrade.adoc
= Upgrade to SAP Connector 5.0 - Mule 4
:page-aliases: connectors::sap/sap-connector-5-upgrade.adoc

Anypoint Connector for SAP version 5.0 has enhancements and changes. Some of the main changes introduced in SAP Connector 5.0 are:

* The `Create` operation is renamed to `Retrieve IDoc`.
* The execute BAPI functions over qRFC, tRFC, and sRFC operations are merged into Synchronous Remote Function Call (sRFC) and Asynchronous Remote Function Call (aRFC) operations.
* The `Disable function template cache` flag is renamed to `Disable JCo internal cache`, and applies to both functions and sources. The default value is `false`.
* The sources now have `-listener` in their aliases instead of `source`. For example, the XML is changed from `sap:document-source` to `sap:document-listener`.
* The SAP configuration has the following changes:
   * The SAP Inbound and SAP Outbound configurations are merged into the new SAP configuration.
   * The *Message Server* field is now in the *General* tab. +
The new configuration makes understanding what configuration to use in the connector more intuitive.

These new features and enhancements may cause backward compatibility issues.

== Upgrade Steps

. In Studio, create a Mule project.
. In the *Mule Palette*, click *Search in Exchange*.
. In *Add Modules to Project*, type "SAP" in the search field.
. In *Available modules*, select *SAP Connector - Mule 4*.
. Click *Add*.
. Click *Finish*.
. In the `pom.xml` file for your project, verify that the `sap-connector` dependency version is 5.0.0.
+
----
<dependency>
    <groupId>com.mulesoft.connectors</groupId>
    <artifactId>mule-sap-connector</artifactId>
    <version>5.0.0</version>
    <classifier>mule-plugin</classifier>
</dependency>
----
+
Anypoint Studio upgrades the connector automatically.

== See Also

xref:5.0@sap-connector-reference.adoc[SAP Connector Reference 5.0]
