sap/5.2/modules/ROOT/pages/sap-connector-5-upgrade.adoc
= Upgrade to SAP Connector 5.x - Mule 4
:page-aliases: connectors::sap/sap-connector-5-upgrade.adoc

Upgrade Anypoint Connector for SAP (SAP Connector) to version 5.0.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|4.x |5.x
|===

== Changes in This Release

Some of the main changes introduced in SAP Connector 5.0 are:

* The `Create` operation is renamed to `Retrieve IDoc`.
* The execute BAPI functions over qRFC, tRFC, and sRFC operations are merged into Synchronous Remote Function Call (sRFC) and Asynchronous Remote Function Call (aRFC) operations.
* The `Disable function template cache` flag is renamed to `Disable JCo internal cache`, and applies to both functions and sources. The default value is `false`.
* Sources now have `-listener` in their aliases instead of `source`. For example, the XML is changed from `sap:document-source` to `sap:document-listener`.
* The SAP Inbound and SAP Outbound configurations are merged into the new SAP configuration.
* The *Message Server* field is now in the *General* tab. +
* The new configuration makes understanding what configuration to use in the connector more intuitive.

These new features and enhancements may cause backward compatibility issues.

== Changes in Configurations

* Removed Operation Timeout Parameter
* Renamed `Disable Function Template Cache` Flag to `Disable JCo Internal Cache` to apply to functions and sources

== Changes in Operations

* Execute BAPI function over qRFC, Execute BAPI function over sRFC, Execute BAPI function over tRFC are now Synchronous Remote Function Call (sRFC) and Asynchronous Remote Function Call (aRFC) operations
* Create IDoc is renamed is Retrieve IDoc
* Removed throws:
  ** SAP:BEGIN_TRANSACTION_ERROR
  ** SAP:COMMIT_TRANSACTION_ERROR
  ** SAP:CONFIG_ERROR
  ** SAP:CONFIRM_TRANSACTION_ERROR
  ** SAP:CONNECTION_ERROR
  ** SAP:FIELD_NOT_FOUND_ERROR
  ** SAP:INVALID_CREDENTIALS_ERROR
  ** SAP:INVALID_HOST_ERROR
  ** SAP:MISSING_BUSINESS_OBJECT_ERROR
  ** SAP:ROLLBACK_TRANSACTION_ERROR
  ** SAP:TID_CREATION_ERROR
  ** SAP:UNKNOWN
  ** SAP:XML_PARSING_ERROR

== Changes in Sources

* Removed Operation Timeout Parameter
* Sources now have `-listener` in their aliases instead of `source`

== Changes in Types

* Message Server in General tab

== Upgrade Prerequisites

Before you perform the upgrade, you must complete the following:

* Create a backup of your files, data, and configurations in case you need to restore to them.
* Install SAP Connector v5.x to replace the SAP operations that were previously included in SAP Connector v4.x.

== Upgrade Steps

Follow these steps to perform the upgrade:

. In Studio, create a Mule project.
. In the *Mule Palette*, click *Search in Exchange*.
. In *Add Modules to Project*, type "SAP" in the search field.
. In *Available modules*, select *SAP Connector - Mule 4*.
. Click *Add*.
. Click *Finish*.
. In the `pom.xml` file for your project, verify that the `sap-connector` dependency version is 5.x.x.
+
----
<dependency>
    <groupId>com.mulesoft.connectors</groupId>
    <artifactId>mule-sap-connector</artifactId>
    <version>5.x.x</version>
    <classifier>mule-plugin</classifier>
</dependency>
----
+
Anypoint Studio upgrades the connector automatically.

== Verify the Upgrade

After you install the latest version of the connector, follow these steps to verify the upgrade:

. In Studio, verify that there are no errors in the *Problems* or *Console* views.
. Verify that there are no problems in the project `pom.xml` file.
. Test the connection to verify that the operations work.

== Troubleshooting

If there are problems with caching the parameters and caching the metadata, try restarting Anypoint Studio.

== Reverting the Upgrade

If it is necessary to revert to the previous version of SAP Connector, change the `sap-connector` dependency version in the project’s `pom.xml` file to the previous version.
You must update the project’s `pom.xml` file in Anypoint Studio.

== See Also

xref:sap-connector-reference.adoc[SAP Connector Reference 5.0]
